# LearnOpenGL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
SimulateOpenGL/Assets/Materials/: AwesomeFace.mat
SimulateOpenGL/Assets/Scenes/: base.unity
SimulateOpenGL/Assets/Scripts/: BaseBehaviour.cs  CameraCtrl.cs
SimulateOpenGL/Assets/Shaders/: BaseShader.shader
SimulateOpenGL/ProjectSettings/: ProjectSettings.asset
app/: CMakeLists.txt  create-opengl-app.sh  delete-opengl-app.sh
app/base/: CMakeLists.txt
app/base/shaders/: fragmentshader.frag  vertexshader.vert
app/base/src/: base.cpp  base.h  main.cpp  main.h
app/common/include/: camera.h  mesh.h  model.h  shader.h
app/common/src/: camera.cpp  mesh.cpp  model.cpp  shader.cpp
app/glfw-win/: CMakeLists.txt
app/glfw-win/src/: main.cpp
app/lighting/: CMakeLists.txt
app/lighting/shaders/: fragmentshader.frag  light.frag  light.vert  vertexshader.vert
app/lighting/src/: lighting.cpp  lighting.h  main.cpp
app/martix-calculator/: CMakeLists.txt
app/martix-calculator/src/: main.cpp
app/src/: main.cpp  shader.h
app/template/: CMakeLists.txt
app/template/shaders/: fragmentshader.frag  vertexshader.vert
app/template/src/: main.cpp
demo/: CMakeLists.txt
demo/glfw-win/: CMakeLists.txt
demo/glfw-win/src/: main.cpp
demo/martix-calculator/: CMakeLists.txt
demo/matrix-calculator/: CMakeLists.txt
demo/matrix-calculator/src/: main.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt  README.md
libs/stb/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
