# cmake_minimum_required(VERSION 3.0)
# project(libs)
include_directories(./include)
aux_source_directory(./src STB_IMAGE_SRC)
set(STB_IMAGE_HEADER
	./include/stb_image.h)
source_group(src FILES ${STB_IMAGE_SRC})
source_group(header FILES ${STB_IMAGE_HEADER})
if(WIN32)
	add_library(stb_image STATIC ${STB_IMAGE_SRC} ${STB_IMAGE_HEADER})
else(WIN32)
	add_library(stb_image SHARED ${STB_IMAGE_SRC} ${STB_IMAGE_HEADER})
endif(WIN32)
